fixed content overflow when sider !collapsed

--- a/src/App.less
+++ b/src/App.less
@@ -7,7 +7,7 @@
 }
 
 .ant-menu-inline-collapsed {
-  width: 60px;
+  width: 50px;
 }
 
 .ant-select {
@@ -43,10 +43,6 @@ h2.ant-typography,
 .ant-typography h2 {
   margin-top: 0px;
   margin-bottom: 0px;
-}
-
-.ant-card-body {
-  padding-bottom: 18px;
 }
 
 .ant-input-search .ant-input-lg {
